--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+APScheduler==3.9.1
+aiogram==3.0.0b5
 colorlog==6.7.0
-aiogram>=3.0.0b4
-aiohttp==3.8.1
 typing==3.7.4.3
-APScheduler==3.8.0
+aiohttp==3.8.3
 colorama==0.4.5
