--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-APScheduler==3.9.1
-aiogram==3.0.0b7
-colorlog==6.7.0
-typing==3.7.4.3
-aiohttp==3.8.4
-colorama==0.4.5
-cachetools==5.3.0
+APScheduler~=3.9.1
+aiogram~=3.0.0
+colorlog~=6.7.0
+pytz~=2022.6
+typing~=3.7.4.3
+aiohttp~=3.8.5
+cachetools~=4.2.4
+colorama~=0.4.5
