--- a/dj_bot.conf
+++ b/dj_bot.conf
@@ -1,5 +1,4 @@
 # supervisorctl
-
 [program:dj_bot]
 directory=/root/djimbo_template/
 command=python3.9 main.py
@@ -7,5 +6,7 @@ command=python3.9 main.py
 autostart=True
 autorestart=True
 
-stderr_logfile=/root/djimbo_template/tgbot/data/sv_log_err.log
-stdout_logfile=/root/djimbo_template/tgbot/data/sv_log_out.log
+stderr_logfile=/root/autoshopDjimbo/tgbot/data/sv_log_err.log
+; stderr_logfile_maxbytes=10MB
+stdout_logfile=/root/autoshopDjimbo/tgbot/data/sv_log_out.log
+; stdout_logfile_maxbytes=10MB
